Home task 5 completed

--- a/HomeTask5/2 pluck/index.html
+++ b/HomeTask5/2 pluck/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>HomeTask5</title>
+	<title>HomeTask5.2</title>
 </head>
 
 <body>
-	<script src='script.js'></script>
+	<script src='pluck.js'></script>
 </body>
 
 </html>
