--- a/HomeTask6/hamburger.html
+++ b/HomeTask6/hamburger.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="row wrapper">
-		<div class="col-3">
+		<div class="col-4 choose-box">
 			<div class="input-group mb-3">
 				<div class="input-group-prepend">
 					<label class="input-group-text"
@@ -40,9 +40,28 @@
 					<option value="salad">Салат</option>
 				</select>
 			</div>
-
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<label class="input-group-text"
+					       for="inputGroupSelect01">Добавки</label>
+				</div>
+				<select class="custom-select"
+				        id="inputGroupSelect01">
+					<option value="mayo"
+					        selected>Майонез</option>
+					<option value="spice">Специи</option>
+				</select>
+				<div class="input-group-prepend">
+					<button class="btn btn-outline-secondary btn-toppings"
+					        type="button">+</button>
+				</div>
+				<div class="input-group-prepend">
+					<button class="btn btn-outline-secondary btn-toppings"
+					        type="button">-</button>
+				</div>
+			</div>
 			<button type="button"
-			        class="btn btn-primary align-bottom">Посчитать</button>
+			        class="btn btn-primary align-bottom calc-btn">Посчитать</button>
 		</div>
 		<div class="col">
 			<img src="hamburger.jpg"
