--- a/HomeTask7/hamburger/hamburger.html
+++ b/HomeTask7/hamburger/hamburger.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>HomeTask6</title>
+	<title>Hamburger</title>
 	<link rel="stylesheet"
 	      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -49,15 +49,13 @@
 				       value="spice">Специи</label>
 		</div>
 		<div class="col">
-			<img src="hamburger.jpg"
+			<img src="img/large.jpg"
 			     class="rounded mx-auto d-block"
 			     alt="Hamburger">
-			<h4 class="text-center">Цена: <span class="price">100</span> тг.</h4>
-			<h4 class="text-center">Калорийность: <span class="price">65</span> ккал</h4>
+			<h4 class="text-center">Цена: <span id="price"></span> тг.</h4>
+			<h4 class="text-center">Калорийность: <span id="kk"></span> ккал</h4>
 		</div>
 	</div>
-
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	        crossorigin="anonymous"></script>
