--- a/HomeTask9/List/index.html
+++ b/HomeTask9/List/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible"
             content="ie=edge">
-      <title>HomeTask9</title>
+      <title>HomeTask9 - List</title>
       <link rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
             integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -17,9 +17,14 @@
 </head>
 
 <body>
-
-      <ul class="list"></ul>
-      <ul class=" list list-favorites"></ul>
+      <div class="ul-box">
+            <h4>Основной список:</h4>
+            <ul class="list"></ul>
+      </div>
+      <div class="ul-box">
+            <h4>Избранное:</h4>
+            <ul class="list list-favorites"></ul>
+      </div>
 
       <script src="js/notes/notes.model.js"></script>
       <script src="js/notes/notes.view.js"></script>
