--- a/HomeTask10/index.html
+++ b/HomeTask10/index.html
@@ -18,7 +18,7 @@
 		<div class="silver active color"></div>
 		<div class="black color"></div>
 		<div class="gold color"></div>
-		<button class="more">Hide</button>
+		<button class="more">More</button>
 	</div>
 	<div class="text">Silver phone description</div>
 
